# ClipIt

./: .gitignore  CMakeLists.txt  README.md  meson.build
po/: meson.build
src/: main.h
